Lesson 10: create (web&api) cart
